fix capture ( show photo when open add/edit paget)

--- a/newProfileBook/newProfileBook/View/AddEditProfileView.xaml
+++ b/newProfileBook/newProfileBook/View/AddEditProfileView.xaml
@@ -18,7 +18,7 @@
             <Image
             HeightRequest="200" 
             Margin="0,20"
-            Source="{Binding ImagePath}">
+            Source="{Binding PhotoImageSource}">
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding ImageCommand}"/>
                 </Image.GestureRecognizers>
