--- a/newProfileBook/newProfileBook/View/SettingsPage.xaml
+++ b/newProfileBook/newProfileBook/View/SettingsPage.xaml
@@ -1,12 +1,102 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="newProfileBook.View.SettingsPage">
+             x:Class="newProfileBook.View.SettingsPage"
+             Title="{Binding Title}">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem
+            Order="Primary"
+            Priority="1"
+            Command="{Binding LogOutTappedCommand}"
+            IconImageSource="ic_exit_to_app.png"/>
+    </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+            </Grid.RowDefinitions>
+
+
+            <Label
+                Grid.Row="0"
+                Text="Sort profiles"
+                VerticalOptions="Center"
+                HorizontalOptions="Center"/>
+            <RadioButton 
+                Grid.Column="0" 
+                Grid.Row="1"
+                Margin="20,0,0,0"
+                IsChecked="{Binding SortByName}"/>
+
+            <Label 
+                Grid.Row="1"
+                Text="Sort profiles by Name"
+                VerticalOptions="Center"
+                Margin="70,0,0,0"/>
+
+            <RadioButton
+                Grid.Column="0" 
+                Grid.Row="2"
+                Margin="20,0,0,0"
+                IsChecked="{Binding SortByNickName}"/>
+            <Label 
+                Grid.Row="2"
+                Text="Sort profiles by Nickname"
+                VerticalOptions="Center"
+                Margin="70,0,0,0"/>
+
+            <RadioButton 
+                Grid.Column="0" 
+                Grid.Row="3"
+                Margin="20,0,0,0"
+                IsChecked="{Binding SortByDateTime}"/>
+
+            <Label 
+                
+                Grid.Row="3"
+                Text="Sort profiles by Date"
+                VerticalOptions="Center"
+                Margin="70,0,0,0"/>
+
+            <Label 
+                Grid.Row="4"
+                Text="Theme"
+                VerticalOptions="Center"
+                HorizontalOptions="Center"/>
+            <CheckBox
+                Grid.Row="5"
+                Margin="20,0,0,0"
+                IsChecked="{Binding CheckTemeDarkLight}"/>
+            <Label 
+                Grid.Row="5"
+                Text="Day/Night Theme"
+                VerticalOptions="Center"
+                Margin="70,0,0,0"/>
+
+            <Label 
+                Grid.Row="6"
+                Text="Language"
+                VerticalOptions="Center"
+                HorizontalOptions="Center"/>
+            <CheckBox
+                Grid.Row="7"
+                Margin="20,0,0,0"
+                IsChecked="{Binding CheckLanguageEngRus}"/>
+            <Label 
+                Grid.Row="7"
+                Text="Eng/Rus Language"
+                VerticalOptions="Center"
+                Margin="70,0,0,0"/>
+
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
