--- a/newProfileBook/newProfileBook/View/MainListPageView.xaml
+++ b/newProfileBook/newProfileBook/View/MainListPageView.xaml
@@ -53,12 +53,12 @@
                                 Orientation="Horizontal" 
                                 VerticalOptions="FillAndExpand"
                                 HorizontalOptions="FillAndExpand">
-                                    <Image Source="{Binding ImagePath}" 
+                                    <Image Source="{Binding ImgPath}" 
                                            HeightRequest="100" 
                                            WidthRequest="100" 
                                            Margin="30" BackgroundColor="AliceBlue">
                                         <Image.GestureRecognizers>
-                                            <TapGestureRecognizer Command="{Binding }" 
+                                            <TapGestureRecognizer Command="{Binding .}" 
                                                           CommandParameter="{Binding .}"/>
                                         </Image.GestureRecognizers>
                                     </Image>
@@ -69,7 +69,7 @@
                                         <Label 
                                         Text="{Binding Name}"/>
                                         <Label 
-                                        Text="{Binding CreationTime}"/>
+                                        Text="{Binding DateTime}"/>
                                     </StackLayout>
                                 </StackLayout>
                             </ViewCell.View>
