--- a/newProfileBook/newProfileBook/View/AddEditProfileView.xaml
+++ b/newProfileBook/newProfileBook/View/AddEditProfileView.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="newProfileBook.View.AddEditProfileView"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+              Style="{StaticResource PageStyle}"
+             >
     
         
         <ContentPage.ToolbarItems>
@@ -29,10 +31,12 @@
                    VerticalOptions="Center"
                    FontAttributes="Bold"
                    Margin="50,30,50,0"
+                   Style="{StaticResource EntryStyle}"
                    Text="{Binding Nickname}"/>
             <Entry x:Name="txtName"
                    Placeholder="Name"
                    Margin="50,10,50,0"
+                   Style="{StaticResource EntryStyle}"
                    Text="{Binding Name}"/>
             <Entry x:Name="txtDiscription"
                    Placeholder="Description"
@@ -40,7 +44,7 @@
                    Margin="50,10,50,0"
                    HeightRequest="150"
                    VerticalTextAlignment="Start"
-                   BackgroundColor="LightGray"
+                   Style="{StaticResource EntryStyle}"
                    Text="{Binding Description}"/>
 
 
