--- a/newProfileBook/newProfileBook/View/MainPage.xaml
+++ b/newProfileBook/newProfileBook/View/MainPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="newProfileBook.MainPage"
              Title="{Binding Title}"
+             Style="{StaticResource PageStyle}"
              >
 
     <StackLayout >
@@ -11,6 +12,7 @@
             Placeholder="Login"
             MaxLength="16"
             Margin="80,200,80,0"
+            Style="{StaticResource EntryStyle}"
             Text="{Binding Login}"/>
         <Entry
             x:Name="txtPassword"
@@ -18,6 +20,7 @@
             MaxLength="16"
             Margin="80,0,80,0"
             IsPassword="True"
+            Style="{StaticResource EntryStyle}"
             Text="{Binding Password}"
             />
         <Button
@@ -27,7 +30,7 @@
             VerticalOptions="Center"
             WidthRequest="250"
             Margin="80,100,80,0"
-            BackgroundColor="Orange"
+            Style="{StaticResource ButtonStyle}"
             Command="{Binding OnTapLogin}"
             />
         <Label 
