--- a/newProfileBook/newProfileBook/View/SignUpPageView.xaml
+++ b/newProfileBook/newProfileBook/View/SignUpPageView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="newProfileBook.View.RegisterPageView"
              Title="{Binding Title}"
+             Style="{StaticResource PageStyle}"
              >
     <ContentPage.Content>
         <StackLayout>
@@ -10,6 +11,7 @@
                 x:Name="txtLogin"
                 Placeholder="Login"
                 Margin="80,200,80,0"
+                Style="{StaticResource EntryStyle}"
                 Text="{Binding Login}"
                 />
             <Entry 
@@ -17,6 +19,7 @@
                 Placeholder="Password"
                 IsPassword="True"
                 Margin="80,0,80,0"
+                Style="{StaticResource EntryStyle}"
                 Text="{Binding Password}"
                 />
             <Entry 
@@ -24,13 +27,14 @@
                 Placeholder="Confirm"
                 IsPassword="True"
                 Margin="80,0,80,0"
+                Style="{StaticResource EntryStyle}"
                 Text="{Binding Confirm}"
                 />
             <Button
                 x:Name="btnRegister"
                 Text="register"
                 Margin="80,80,80,80"
-                BackgroundColor="Orange"
+                Style="{StaticResource ButtonStyle}"
                 Command="{Binding OnTapRegisterUser}"
                 />
         </StackLayout>
