--- a/newProfileBook/newProfileBook/View/MainListPageView.xaml
+++ b/newProfileBook/newProfileBook/View/MainListPageView.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="newProfileBook.View.MainListPageView"
+             xmlns:resources="clr-namespace:newProfileBook.RESX"
              Title="{Binding Title}"
              Style="{StaticResource PageStyle}"
              >
@@ -38,12 +39,12 @@
 
                             <ViewCell.ContextActions>
 
-                                <MenuItem Text="Edit" 
+                                <MenuItem Text="Edit"
                                           Command="{Binding  Path=BindingContext.EditCommand ,Source={x:Reference Name=MyListView} }" 
                                 CommandParameter="{Binding .}"
                                           IsDestructive="True"/>
 
-                                <MenuItem Text="Delete" 
+                                <MenuItem Text="Delete"
                                 Command="{Binding  Path=BindingContext.RemoveCommand ,Source={x:Reference Name=MyListView}}" 
                                           CommandParameter="{Binding .}" 
                                           IsDestructive="True"/>
