--- a/newProfileBook/newProfileBook/View/SettingsPage.xaml
+++ b/newProfileBook/newProfileBook/View/SettingsPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="newProfileBook.View.SettingsPage"
+             xmlns:resources="clr-namespace:newProfileBook.RESX"
              Title="{Binding Title}"
              Style="{StaticResource PageStyle}"
              >
@@ -30,7 +31,7 @@
 
             <Label
                 Grid.Row="0"
-                Text="Sort profiles"
+                Text="SortProfiles"
                 VerticalOptions="Center"
                 HorizontalOptions="Center"
                 Style="{StaticResource LabelStyle}"/>
@@ -42,7 +43,7 @@
 
             <Label 
                 Grid.Row="1"
-                Text="Sort profiles by Name"
+                Text="SortbyName"
                 VerticalOptions="Center"
                 Margin="70,0,0,0"
                 Style="{StaticResource LabelStyle}"/>
@@ -54,7 +55,7 @@
                 IsChecked="{Binding SortByNickName}"/>
             <Label 
                 Grid.Row="2"
-                Text="Sort profiles by Nickname"
+                Text="SortbyNickname"
                 VerticalOptions="Center"
                 Margin="70,0,0,0"
                 Style="{StaticResource LabelStyle}"/>
@@ -68,7 +69,7 @@
             <Label 
                 
                 Grid.Row="3"
-                Text="Sort profiles by Date"
+                Text="SortbyDate"
                 VerticalOptions="Center"
                 Margin="70,0,0,0"
                 Style="{StaticResource LabelStyle}"/>
@@ -85,7 +86,7 @@
                 IsChecked="{Binding CheckTemeDarkLight}"/>
             <Label 
                 Grid.Row="5"
-                Text="Day/Night Theme"
+                Text="DayNightTheme"
                 VerticalOptions="Center"
                 Margin="70,0,0,0"
                 Style="{StaticResource LabelStyle}"/>
@@ -102,7 +103,7 @@
                 IsChecked="{Binding CheckLanguageEngRus}"/>
             <Label 
                 Grid.Row="7"
-                Text="Eng/Rus Language"
+                Text="RuEng"
                 VerticalOptions="Center"
                 Margin="70,0,0,0"
                 Style="{StaticResource LabelStyle}"/>
