--- a/newProfileBook/newProfileBook/View/MainListPageView.xaml
+++ b/newProfileBook/newProfileBook/View/MainListPageView.xaml
@@ -39,12 +39,12 @@
 
                             <ViewCell.ContextActions>
 
-                                <MenuItem Text="Edit"
+                                <MenuItem Text="{x:Static resources:AppResources.Edit}"
                                           Command="{Binding  Path=BindingContext.EditCommand ,Source={x:Reference Name=MyListView} }" 
                                 CommandParameter="{Binding .}"
                                           IsDestructive="True"/>
 
-                                <MenuItem Text="Delete"
+                                <MenuItem Text="{x:Static resources:AppResources.Delete}"
                                 Command="{Binding  Path=BindingContext.RemoveCommand ,Source={x:Reference Name=MyListView}}" 
                                           CommandParameter="{Binding .}" 
                                           IsDestructive="True"/>
