--- a/newProfileBook/newProfileBook/View/AddEditProfileView.xaml
+++ b/newProfileBook/newProfileBook/View/AddEditProfileView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="newProfileBook.View.AddEditProfileView"
              xmlns:resources="clr-namespace:newProfileBook.RESX"
-             Title="{Binding Title}"
+             Title="{Binding Resources[AddEditProfile]}"
              
               Style="{StaticResource PageStyle}"
              >
@@ -29,19 +29,19 @@
             </Image>
             
             <Entry x:Name="txtNickname"
-                   Placeholder="{x:Static resources:AppResources.Nickname}"
+                   Placeholder="{Binding Resources[Nickname]}"
                    VerticalOptions="Center"
                    FontAttributes="Bold"
                    Margin="50,30,50,0"
                    Style="{StaticResource EntryStyle}"
                    Text="{Binding Nickname}"/>
         <Entry x:Name="txtName"
-                   Placeholder="{x:Static resources:AppResources.Name}"
+                   Placeholder="{Binding Resources[Name]}"
                    Margin="50,10,50,0"
                    Style="{StaticResource EntryStyle}"
                    Text="{Binding Name}"/>
         <Entry x:Name="txtDiscription"
-                   Placeholder="{x:Static resources:AppResources.Description}"
+                   Placeholder="{Binding Resources[Description]}"
                    VerticalOptions="Center"
                    Margin="50,10,50,0"
                    HeightRequest="150"
